# costfuse

./: .gitignore  LICENSE  README.md  WALKTHROUGH.md  package-lock.json  package.json  tsconfig.json
examples/: claude-test.ts  loop-test.ts  mock-test.ts
python/: README.md  pyproject.toml  smoketest.py
python/costfuse/: __init__.py
python/examples/: claude_test.py  loop_test.py  mock_test.py
src/: index.ts
